# pindilogji

./: .gitignore  Cargo.toml  README.md
pindilogji-server/: Cargo.toml
pindilogji-server/src/: main.rs
pindilogji-ui/: Cargo.toml
pindilogji-ui/src/: lib.rs
sample/: tmp.txt  tmp2.txt
src/: lib.rs  main.rs  xml_parse.rs
